--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "homepage": "https://github.com/HZooly/npm-discord-bot#readme",
   "dependencies": {
-    "discord.js": "^12.2.0"
+    "discord.js": "^12.2.0",
+    "dotenv": "^8.2.0",
+    "got": "^11.0.0"
   }
 }
