--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Discord bot that check in NPM registry",
   "main": "src/main.js",
   "scripts": {
-    "start": "node src/main.js"
+    "start": "node src/main.js",
+    "lint": "./node_modules/eslint/bin/eslint.js src/** --fix"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,8 @@
     "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
     "got": "^11.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0"
   }
 }
